--- a/src/pug/404.pug
+++ b/src/pug/404.pug
@@ -11,8 +11,8 @@ block content
 		+contacts-header
 		.wrapper-bg(style="background-image:url('img/promo.jpg')")
 		.box
-			.header-inner.header-inner_inner-page
-				.header-inner__title.fade-down
+			.header-inner.header-inner_inner-page.header-inner_animate
+				.header-inner__title
 					h1.h1 Ошибка 404
 	.box
 		+breadcrumbs(['Главная', 'Ошибка 404'])
@@ -22,7 +22,7 @@ block content
 				.side-bar-banner.js-stick
 					+link-banner('Узнать больше и заказать наши услуги', 'Перейти к услугам', 'side-banner-1.jpg')
 			.content-inner
-				.error-404.content-inner-group-min-w.fade-down
+				.error-404.content-inner-group-min-w
 					h2.h2.error-404__title Страница не найдена
 					p.text-primary.error-404__desc Такое иногда случается. Самые вероятные причины - устаревшая ссылка или страница была удалена. Перейдите на&ensp;
 						a(href="/") главную страницу
