--- a/src/pug/sertificate-popup.pug
+++ b/src/pug/sertificate-popup.pug
@@ -5,7 +5,7 @@ include includes/_mixins.pug
 		.modal-container.contents-modal.sertificates-modal
 			button(type="button").pop-close.closePopup
 					+icon('close')
-			.big-image-slider
+			.image-slider
 				.big-image-slide
 					.big-image-slide-inner
 						img(src="img/sertificate-2-big.jpg", alt="sertificate")
