--- a/src/sass/lib/_mixins.sass
+++ b/src/sass/lib/_mixins.sass
@@ -332,7 +332,7 @@
 	padding-right: 23px
 	line-height: 3em
 	border-radius: 5px
-	+tr(all .3s ease)
+	+tr(all .1s ease-in-out)
 	+box
 	&:hover
 		background-color:  $bg-hover
