--- a/src/pug/0-0index.pug
+++ b/src/pug/0-0index.pug
@@ -41,7 +41,7 @@ block content
 							p.text-primary.promo-reclame__text Уровень доступности сервисов 99,982%
 	.basic-services
 		.box
-			h2.basic-services-title.h2.fade-up Основные услуги
+			h2.basic-services-title.h2 Основные услуги
 			.basic-services-slider
 				.basic-services-outer
 					.basic-services-wrapper
@@ -86,12 +86,12 @@ block content
 							.service-card__icon
 								<svg xmlns="http://www.w3.org/2000/svg" data-name="Layer 1" viewBox="0 0 64 63"><path fill="none" stroke="currentcolor" d="M27 48.5l-4-4-4 4m26 0l-4-4-4 4m-1 10l-4 4-4-4" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M23 44.5v11H0m41-11v11h23m-32-12v19" stroke-linejoin="round"/><circle cx="30" cy="14.5" r="7" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M44 5.5c5 0 10 6 10 12 5 0 9 5.1 9 11a12 12 0 0 1-12 12H13a12 12 0 0 1 0-24"/><circle cx="30" cy="14.5" r="3" fill="none" stroke="currentcolor" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" d="M25 35.5h-2m14 0h-2m-2 0h-2m-2 0h-2m14 0h-2" stroke-linejoin="round"/><path fill="none" stroke="currentcolor" stroke-miterlimit="10" d="M41 14.5V14l2.8-1.9a22.47 22.47 0 0 0-1.2-3.7l-3.4.1c-.2-.3-.4-.5-.6-.8l1.1-3.2a12.44 12.44 0 0 0-3.2-2.3l-2.7 2.1-.9-.3-1-3.3a12.31 12.31 0 0 0-2-.2 13.55 13.55 0 0 0-2 .2l-1 3.3-.9.3-2.7-2.1a14.43 14.43 0 0 0-3.2 2.3l1.1 3.2c-.2.3-.4.5-.6.8l-3.4-.1a12.34 12.34 0 0 0-1.2 3.7l3 1.9v1l-2.8 1.9a11.49 11.49 0 0 0 1.2 3.7l3.4-.1c.2.3.4.5.6.8l-1.1 3.2a12.44 12.44 0 0 0 3.2 2.3l2.7-2.1.9.3 1 3.3a12.31 12.31 0 0 0 2 .2 13.55 13.55 0 0 0 2-.2l1-3.3.9-.3 2.7 2.1a14.43 14.43 0 0 0 3.2-2.3l-1.1-3.2c.2-.3.4-.5.6-.8l3.4.1a12.34 12.34 0 0 0 1.2-3.7L41 15z"/></svg>
 				.basic-services__nav
-			.server-graph.fade-down(style="background-image:url('img/graph.gif')")
+			.server-graph(style="background-image:url('img/graph.gif')")
 				p.server-graph__title 99,982%
 				p.server-graph__desc.text-primary Уровень доступности сервисов
 	.about-center
 		.box
-			.about-center__inner.fade-down
+			.about-center__inner
 				.about-center__title
 					h2.h2 Дата-центр velcom
 					p.text-primary Дата-центр — одно из новых направлений бизнеса известного телекоммуникационного бренда
@@ -107,12 +107,12 @@ block content
 					+link-more('Больше о дата-центре', 'about-center__link')
 				.about-center__build
 					img(src="img/data-canter.png", alt="clouds")
-		.about-center__clouds.fade-up
+		.about-center__clouds
 			img(src="img/clouds.png", alt="clouds")
 	.advantages
 		.box
-			h2.h2.advantages__title.fade-up Размещение ИТ&#8209;инфраструктуры в ЦОД существенно снижает расходы на эксплуатацию и управление:
-			.advantages__slider.fade-down
+			h2.h2.advantages__title Размещение ИТ&#8209;инфраструктуры в ЦОД существенно снижает расходы на эксплуатацию и управление:
+			.advantages__slider
 				.advantages__item
 					.advantages__check 
 						+icon('checked')
@@ -137,15 +137,15 @@ block content
 					.advantages__check
 						+icon('checked')
 					p.text-primary возможность минимизировать или сократить полностью затраты на приобретение оборудования
-			.advantages__btn-wrap.fade-up
-				a.link-consultation.js-popup-button(href="#", data-modal='get-consultation') Получить консультацию
+			.advantages__btn-wrap
+				a(href="#").link-consultation Получить консультацию
 			.advantages__slider-dots
-		.advantages-decor.fade-up(style="background-image:url('img/advantages-man-1.png')")
+		.advantages-decor(style="background-image:url('img/advantages-man-1.png')")
 	.main-news
 		.box.box_inner
-			.main-news__title.fade-up
+			.main-news__title
 				h2.h2 Новости дата-центра
-			.main-news__wrap.fade-down
+			.main-news__wrap
 				//-news-item(img, short_text, date, add_class, tags)
 				+news-item('news-1.jpg', '«Классика у Ратуши с velcom» подарила минчанам фотовыставку с лучшими моментами фестиваля', '25 августа 2017', 'news-index', 'Сми о нас')
 				+news-item('news-2.jpg', '#velcombegom: минские бегуны впервые проведут 24-часовую эстафету-марафон', '23 августа 2017', 'news-index', 'Мероприятие')
