--- a/src/pug/1-3sertificates.pug
+++ b/src/pug/1-3sertificates.pug
@@ -11,8 +11,8 @@ block content
 		+contacts-header
 		.wrapper-bg(style="background-image:url('img/promo.jpg')")
 		.box
-			.header-inner.header-inner_inner-page
-				.header-inner__title.fade-down
+			.header-inner.header-inner_inner-page.header-inner_animate
+				.header-inner__title
 					h1.h1 Документация
 	.box
 		+breadcrumbs(['Главная', 'Сертификаты'])
@@ -24,9 +24,9 @@ block content
 						span.link-value ...
 						span.link-i-arrow
 							+icon('arrow_down')
-					+link-navigation(['Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости', 'Галерея'])
+					+link-navigation(['Сертификаты', 'Команда', 'Документация', 'Инфраструктура', 'Новости', 'Галерея'])
 			.content-inner
-				.data-sertificate.fade-down
+				.data-sertificate
 					+sertificate('09.06.2017', 'Uptime Institute Tier III Certified', 'sertificate-2-min.jpg', 0)
 					+sertificate('17.08.2017', 'Tier III operational SUSTAINABILITY - GOLD', 'sertificate-1-min.jpg', 1)
 					+sertificate('23.09.2017', 'Constructed facility', 'sertificate-2-min.jpg', 2)
