--- a/src/pug/1-4infrastructure.pug
+++ b/src/pug/1-4infrastructure.pug
@@ -11,8 +11,8 @@ block content
 		+contacts-header
 		.wrapper-bg(style="background-image:url('img/promo.jpg')")
 		.box
-			.header-inner.header-inner_inner-page
-				.header-inner__title.fade-down
+			.header-inner.header-inner_inner-page.header-inner_animate
+				.header-inner__title
 					h1.h1 Инфраструктура
 	.box
 		+breadcrumbs(['Главная', 'Инфраструктура'])
@@ -24,7 +24,7 @@ block content
 						span.link-value ...
 						span.link-i-arrow
 							+icon('arrow_down')
-					+link-navigation(['Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости', 'Галерея'])
+					+link-navigation(['Команда', 'О Дата-центре', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости', 'Галерея'])
 			.content-inner
 				.infrastructure-links
 					+infrastructure-links-item(['Система электроснабжения', 'Система кондиционирования', 'Система пожаротушения ', 'Телекоммуникации', 'Комплексная безопасность'])
