--- a/src/pug/1-6gallery-inner.pug
+++ b/src/pug/1-6gallery-inner.pug
@@ -11,8 +11,8 @@ block content
 		+contacts-header
 		.wrapper-bg(style="background-image:url('img/promo.jpg')")
 		.box
-			.header-inner.header-inner_inner-page
-				.header-inner__title.fade-down
+			.header-inner.header-inner_inner-page.header-inner_animate
+				.header-inner__title
 					h1.h1 Галерея
 	.box
 		+breadcrumbs(['Главная', 'Галерея'])
@@ -24,9 +24,9 @@ block content
 						span.link-value ...
 						span.link-i-arrow
 							+icon('arrow_down')
-					+link-navigation(['Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости', 'Галерея'])
+					+link-navigation(['Галерея', 'О Дата-центре', 'Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости'])
 			.content-inner
-				.gallery-inner.fade-down
+				.gallery-inner
 					h2.h2 Новый сервер
 					p.text-primary 18 фото
 					.gallery
