--- a/src/pug/1-6gallery.pug
+++ b/src/pug/1-6gallery.pug
@@ -11,8 +11,8 @@ block content
 		+contacts-header
 		.wrapper-bg(style="background-image:url('img/promo.jpg')")
 		.box
-			.header-inner.header-inner_inner-page
-				.header-inner__title.fade-down
+			.header-inner.header-inner_inner-page.header-inner_animate
+				.header-inner__title
 					h1.h1 Галерея
 	.box
 		+breadcrumbs(['Главная', 'Галерея'])
@@ -24,9 +24,9 @@ block content
 						span.link-value ...
 						span.link-i-arrow
 							+icon('arrow_down')
-					+link-navigation(['Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости', 'Галерея'])
+					+link-navigation(['Галерея', 'О Дата-центре', 'Команда', 'Документация', 'Сертификаты', 'Инфраструктура', 'Новости'])
 			.content-inner
-				.gallery.fade-down
+				.gallery
 					+gallery-album('gallery-1.jpg', 'Новый сервер', '18')
 					+gallery-album('gallery-2.jpg', 'Открытие отделения', '27')
 					+gallery-album('gallery-3.jpg', 'Концерт “Velcom”', '12')
