--- a/src/pug/3-0service.pug
+++ b/src/pug/3-0service.pug
@@ -11,14 +11,14 @@ block content
 		+contacts-header
 		.wrapper-bg(style="background-image:url('img/promo.jpg')")
 		.box
-			.header-inner.header-inner_inner-page
-				.header-inner__title.fade-down
+			.header-inner.header-inner_inner-page.header-inner_animate
+				.header-inner__title
 					h1.h1 Услуги
 	.box
 		+breadcrumbs(['Главная', 'Услуги'])
 	.basic-services.basic-services_page
 		.box
-			h2.basic-services-title.h2.fade-up Основные услуги
+			h2.basic-services-title.h2 Основные услуги
 			.basic-services-slider
 				.basic-services-outer
 					.basic-services-wrapper
