--- a/src/pug/3-2service-inner.pug
+++ b/src/pug/3-2service-inner.pug
@@ -11,8 +11,8 @@ block content
 		+contacts-header
 		.wrapper-bg(style="background-image:url('img/promo.jpg')")
 		.box
-			.header-inner.header-inner_inner-page
-				.header-inner__title.fade-down
+			.header-inner.header-inner_inner-page.header-inner_animate
+				.header-inner__title
 					h1.h1 Co-location
 	.box
 		+breadcrumbs(['Главная', 'Услуги'])
@@ -27,8 +27,8 @@ block content
 								+icon('arrow_down')
 						+link-navigation(['Co-location', 'Выделенные сервера', 'IaaS'])
 				.content-inner
-					h2.h2.content-inner__title.fade-up Аренда серверных шкафов (стоек) либо площадей, для размещения оборудования с обеспечением гарантированного электропитания, климатического режима и доступа в Интернет
-					.bg-gray.fade-down
+					h2.h2.content-inner__title Аренда серверных шкафов (стоек) либо площадей, для размещения оборудования с обеспечением гарантированного электропитания, климатического режима и доступа в Интернет
+					.bg-gray
 						.services-inner-details
 							h3.h3 Преимущества
 							ul.services-inner-details__list.js-slidelist(data-items='5')
@@ -52,8 +52,8 @@ block content
 					.services-config-inner
 						form(action="#").services-config
 						
-							h3.h3.fade-down Предлагаем вам воспользоваться стандартными конфигурациями:
-							.services-config-wrap.fade-down
+							h3.h3 Предлагаем вам воспользоваться стандартными конфигурациями:
+							.services-config-wrap
 								.accordeon-wrapper
 									.accordeon-head
 										label.accordeon-head-check
@@ -142,8 +142,8 @@ block content
 												dd.text-small.text-small_black.text-small_bold
 													.accordeon-checked
 														+icon('checked')
-							h3.h3.fade-down Или мы разработаем для вас индивидуальное решение:
-							.services-config-wrap.fade-down
+							h3.h3 Или мы разработаем для вас индивидуальное решение:
+							.services-config-wrap
 								.accordeon-wrapper
 									.accordeon-head
 										label.accordeon-head-check
@@ -276,8 +276,8 @@ block content
 												dd.text-small.text-small_black.text-small_bold
 													.accordeon-checked
 														+icon('checked')
-							h3.h3.fade-down Дополнительные услуги:
-							.services-config-wrap.fade-down
+							h3.h3 Дополнительные услуги:
+							.services-config-wrap
 								.accordeon-wrapper.accordeon-wrapper_no-check
 									.accordeon-head
 										.accordeon-head-content.js-accordeon-trigger
@@ -317,9 +317,9 @@ block content
 												dd.text-small.text-small_black.text-small_bold
 													.accordeon-checked
 														+icon('checked')
-							.services-config-ordering.fade-down
+							.services-config-ordering
 								a(href="#", data-scroll-to="#form-order").services-config-ordering__link.link-button.btn-scrl Заказать 
-							.data-center-cooperation.fade-down
+							.data-center-cooperation
 								.data-center-cooperation__promo(style="background-image:url('img/services-page.jpg')")
 									.data-center-partner
 										p.data-center-partner__title Стоимость
