--- a/src/pug/4-0partners.pug
+++ b/src/pug/4-0partners.pug
@@ -11,8 +11,8 @@ block content
 		+contacts-header
 		.wrapper-bg(style="background-image:url('img/promo.jpg')")
 		.box
-			.header-inner.header-inner_inner-page
-				.header-inner__title.fade-down
+			.header-inner.header-inner_inner-page.header-inner_animate
+				.header-inner__title
 					h1.h1 Партнёры
 	.box
 		+breadcrumbs(['Главная', 'Партнёры'])
@@ -22,9 +22,9 @@ block content
 				.side-bar-banner.js-stick
 					+link-banner('Узнать больше и заказать наши услуги', 'Перейти к услугам', 'side-banner-1.jpg')
 			.content-inner
-				.content-inner-group.fade-up
+				.content-inner-group
 					h2.h2.content-inner__title Услуги по системной интеграции и проектные решения мы сможем оказать с помощью своих партнеров, уже реализовавших не один проект на базе ЦОД Velcom
-				.content-inner-group.fade-down
+				.content-inner-group
 					.partners
 						.partners-icon
 							.partners-icon-outer
@@ -45,7 +45,7 @@ block content
 									.partners-info-pluses Повышение производительности
 									.partners-info-pluses Улучшение качества
 									.partners-info-pluses Администрирование
-				.content-inner-group.fade-down
+				.content-inner-group
 					.partners
 						.partners-icon
 							.partners-icon-outer
@@ -63,7 +63,7 @@ block content
 								.partners-info-pluses-wrap
 									.partners-info-pluses Повышение
 									.partners-info-pluses Улучшение качества
-				.content-inner-group.fade-down
+				.content-inner-group
 					.partners
 						.partners-icon
 							.partners-icon-outer
