--- a/src/pug/5-0project.pug
+++ b/src/pug/5-0project.pug
@@ -11,8 +11,8 @@ block content
 		+contacts-header
 		.wrapper-bg(style="background-image:url('img/promo.jpg')")
 		.box
-			.header-inner.header-inner_inner-page
-				.header-inner__title.fade-down
+			.header-inner.header-inner_inner-page.header-inner_animate
+				.header-inner__title
 					h1.h1 Наши клиенты и проекты
 	.box
 		+breadcrumbs(['Главная', 'Наши клиенты и проекты'])
@@ -23,9 +23,9 @@ block content
 					+link-banner('Узнать больше и заказать наши услуги', 'Перейти к услугам', 'side-banner-1.jpg')
 			.content-inner
 				.projects
-					.content-inner-group.fade-up
+					.content-inner-group
 						h2.h2.content-inner__title Аренда серверных шкафов (стоек) либо площадей, для размещения оборудования с обеспечением гарантированного
-					.projects-body.fade-down
+					.projects-body
 						.projects-filters
 							.projects-filters__title Кейсы
 							form.projects-filters__form(action="#")
