--- a/src/pug/gallery-album-1.pug
+++ b/src/pug/gallery-album-1.pug
@@ -5,7 +5,7 @@ include includes/_mixins.pug
 		.modal-container.contents-modal.gallery-album-modal
 			button(type="button").pop-close.closePopup
 					+icon('close')
-			.big-image-slider
+			.image-slider
 				.big-image-slide
 					.big-image-slide-inner
 						img(src="img/gallery-photo-1.jpg", alt="sertificate")
