--- a/src/pug/search-result.pug
+++ b/src/pug/search-result.pug
@@ -11,8 +11,8 @@ block content
 		+contacts-header
 		.wrapper-bg(style="background-image:url('img/promo.jpg')")
 		.box
-			.header-inner.header-inner_inner-page
-				.header-inner__title.fade-down
+			.header-inner.header-inner_inner-page.header-inner_animate
+				.header-inner__title
 					h1.h1 Поиск
 	.box
 		+breadcrumbs(['Главная', 'Поиск'])
